--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "builder"
   ],
   "devDependencies": {
+    "@emotion/eslint-plugin": "^11.7.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-react": "^7.27.1",
     "lerna": "^4.0.0",
     "prettier": "^2.5.1"
   },
