--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,23 +1,28 @@
 {
   "name": "@nyans/react",
+  "license": "MIT",
   "version": "0.0.0",
   "source": "src/index.js",
   "main": "./dist/index.js",
   "type": "module",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "build": "babel src -d dist",
     "build:storybook": "DISABLE_NEW_JSX_TRANSFORM=true build-storybook",
     "dev": "yarn build --watch",
-    "storybook": "DISABLE_NEW_JSX_TRANSFORM=true start-storybook"
+    "storybook": "DISABLE_NEW_JSX_TRANSFORM=true start-storybook",
+    "prepare": "yarn build",
+    "prepublishOnly": "cp ../README.md ."
   },
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
-    "@nyans/parser": "*",
+    "@nyans/parser": "0.0.0",
     "chroma-js": "^2.1.2",
     "lodash": "^4.17.21",
-    "tailwindcss": "^3.0.1",
-    "yaml": "^1.10.2"
+    "tailwindcss": "^3.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
