--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nyans/react",
   "license": "MIT",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "source": "src/index.js",
   "main": "./dist/index.js",
   "type": "module",
@@ -19,7 +19,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
-    "@nyans/parser": "0.0.0",
+    "@nyans/parser": "^0.1.0",
     "chroma-js": "^2.1.2",
     "lodash": "^4.17.21",
     "tailwindcss": "^3.0.1"
