--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "version": "0.2.0",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "publishConfig": {
     "access": "public"
   },
